--- a/src/shiny-hunting-app.css
+++ b/src/shiny-hunting-app.css
@@ -100,6 +100,10 @@
   cursor: pointer;
 }
 
+.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
 
 .rainbow {
   animation: colorRotate 1s linear 0s infinite;
